...
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="KJM-88-QYO"/>
                                                        <constraint firstAttribute="width" constant="44" id="iPy-yc-n67"/>
                                                    </constraints>
                                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="No Active"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="No Active"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="QvC-Pn-9O5" eventType="touchUpInside" id="JQ9-pf-HNF"/>
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="04 декабря 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hTY-Wf-jiv" userLabel="Date Label
...
                                <connections>
                                    <outlet property="delegate" destination="xZZ-sq-kGf" id="RZc-D7-kkm"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zMN-4J-tAL">
                                <rect key="frame" x="8" y="11" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="back_button"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="48" id="ANa-Td-xjq"/>
                                    <constraint firstAttribute="height" constant="48" id="XxE-s8-YuE"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="chevron.backward" title=" "/>
...
            </objects>
            <point key="canvasLocation" x="-1034" y="347"/>
        </scene>
        <!--Auth View Controller-->
        <scene sceneID="DGb-xa-cdU">
            <objects>
                <viewController storyboardIdentifier="AuthViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="wnw-Qx-7dT" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="zZQ-Ob-Av9">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Autentificate" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B4p-Ni-yRb">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="wlF-NA-9r5"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
...
