...
    // MARK: - Public properties
    weak var viewController: ProfileViewControllerProtocol?
    
    // MARK: - Public Methods
    func showAlert() -> UIAlertController {
        let alertController = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert)
        
        let quitAction = UIAlertAction(title: "Да", style: .default, handler: { _ in self.profileLogOut()
        })
        let cancelAction = UIAlertAction(title: "Нет", style: .cancel)
        
        alertController.addAction(quitAction)
        alertController.addAction(cancelAction)
        return alertController
...
